#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU General Public License for more details.
#
#    You should have received a copy of the GNU General Public License
#    along with this program.  If not, see <http://www.gnu.org/licenses/>.
#
################################################################


2013-02-03  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999986 released.

        * More Fixes for installation of mozrepl in Makefile.PL.


2013-02-01  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999985 released.

        * Fixed mirror() when no time in Linux and daylight
          savings time - now MUCH faster.


2013-02-01  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999984 released.

        * Fixed mirror() when no time in Linux and daylight
          savings time.

        * Added gbp lookup for mirror().


2013-01-30  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999983 released.

        * Fixed installation of mozrepl in Makefile.PL.


2013-01-28  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999982 released.

        * Fixed installation of mozrepl in Makefile.PL.

        * Added code to correctly handle password in
          FullAuto.pm.


2013-01-28  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999981 released.

        * Fixed changing permissions on /var for cygwin.


2013-01-25  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999980 released.

        * Added Berkeley DB recover when new process discovers
          older process with deadlock.


2013-01-25  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999979 released.

        * Removed sudo from BerkeleyDB install in Makefile.PL


2013-01-24  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999978 released.
