@@ -14,17 +14,17 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 a282450ac4ccddc5d9176256ced3e69da8f66a37 ChangeLog
+SHA1 55e9ab1ac5448d786f93546fbffbaceecd9bc3ec ChangeLog
 SHA1 5437f164ae11b18bb58a8576204254a1b4a9334b LICENSE
 SHA1 d910f2158f397101c20143f72890951dbff888b5 MANIFEST
-SHA1 09203830359fe34c9a428d3f1d7845d1a568a23f META.yml
-SHA1 399d0ec1d175c5c17aa681794537e5567f42bd40 MYMETA.json
-SHA1 6c6a39b2e3d6e7f18dc832003eae5a4d4b254c22 MYMETA.yml
-SHA1 2fc0e9ce59db14c99db160779802ff8bca39582f Makefile.PL
+SHA1 5bccdbf05fac6975c20fcd98bbed2f9f9da00445 META.yml
+SHA1 2e43732b2e7f87c80568c05d0c88355f270246a5 MYMETA.json
+SHA1 bba40326d84e2593c68450442118d1c7aea2ec1d MYMETA.yml
+SHA1 5beef957016150385002b9d0079d919c31c8e437 Makefile.PL
 SHA1 38228eb2b6a24938b795a73e324f9f51a2a13756 README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 6671adf9bf15b05200f2eb0ce2ac8b257a9e6050 bin/fullauto.pl
-SHA1 9ed0ad5565434ce0195e1b6520423d796990032b bin/install_mozrepl_plugin.exe
+SHA1 6da7a3722ec9dccb9b4e8d71b67eea7d77ad6632 bin/install_mozrepl_plugin.exe
 SHA1 20c73697e1713638140c719d8eaa19a275ed43a5 inc/Module/AutoInstall.pm
 SHA1 7305dbe2904416e28decb05396988a5d51d578be inc/Module/Install.pm
 SHA1 1549721e44d5fc5a9ad4d9cbf39e78c2ba4388d4 inc/Module/Install/Admin.pm
@@ -38,8 +38,8 @@ SHA1 026cc0551a0ad399d195e395b46bdf842e115192 inc/Module/Install/Metadata.pm
 SHA1 d3a4c720c6ec7f8fce7df37002fbc9177fb77050 inc/Module/Install/Scripts.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
-SHA1 1bbeeea11b2a95c5f6c8901bbe7f687787d1368f install_mozrepl_plugin.ahk
-SHA1 8672d4f80de8cc1186ce7251fd1778199c449cd5 lib/Net/FullAuto.pm
+SHA1 16eb2bcf54836bf417e2c5d9972e2fbd1ea4744b install_mozrepl_plugin.ahk
+SHA1 238e2d6116296e0661c5538a0d3b49ab8532aa6f lib/Net/FullAuto.pm
 SHA1 da4cad3f90b32301fad4f5a910b67b37c5105b49 lib/Net/FullAuto/Custom/BackUp/README
 SHA1 966d316495dc2c924ba00e0eaa065391a8c967c5 lib/Net/FullAuto/Custom/README
 SHA1 931b73137675e23ff80148d72aa09415fdb164af lib/Net/FullAuto/Distro/fa_code.pm
@@ -56,7 +56,7 @@ SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.12 (Cygwin)
 
-iEYEARECAAYFAlEO6KMACgkQJM3IZYB6aOqBZACgp8c0Dzf0RgumnJeS9FJhUkeF
-9LIAoKVmTGn5zscLDRtTkhJ/33LsGMcV
-=qqJQ
+iEYEARECAAYFAlEP/WQACgkQJM3IZYB6aOrcmACfSfsfoAAxA6uSCBoYRj12zWxZ
+aywAnjUCGIYxl/SI9DUdVBQS83KSutR3
+=2o53
 -----END PGP SIGNATURE-----
