@@ -21,7 +21,7 @@ package Net::FullAuto;
 ################################################################
 
 
-our $VERSION='0.999986';
+our $VERSION='0.999987';
 
 
 use 5.005;
